# financial-model-router-oss

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  index.html  pyproject.toml
.github/workflows/: calculation-ci.yml  calculation-format-diagnostic.yml  ci.yml  executor-ci.yml  financial-data-ci.yml  input-population-ci.yml  pages.yml  provider-router-ci.yml  provider-sdk-ci.yml  write-plan-ci.yml
docs/: AGENT_ACCESS.md  ARCHITECTURE.md  CALCULATED_OUTPUT_ACCEPTANCE.md  CODE_INVENTORY.md  CONTENT_PLANNING.md  COORDINATE_PLANNING.md  DEVELOPER_WORKBENCH.md  FINANCIAL_DATA_INTAKE.md  FORMULA_STYLE_SPECIFICATIONS.md  GUIDED_SCOPING.md  INDUSTRY_EXTENSIONS.md  INPUT_POPULATION.md  IP_BOUNDARY.md  MODEL_ACCEPTANCE.md  NATIVE_XLSX_MIGRATION.md  OPERATIONS.md  ORGANIZATION_ROUTING.md  PRACTITIONER_ROADMAP.md  PRODUCT_CHARTER.md  PROVIDER_REGISTRY.md  PROVIDER_ROUTING.md  PROVIDER_SDK.md  RELEASE_QUALIFICATION.md  ROADMAP.md  SEMANTIC_TARGET_RESOLUTION.md  SERVICE.md  WORKBOOK_ANALYSIS.md  WORKBOOK_EXECUTION.md  WORKBOOK_INSPECTION.md  WORKBOOK_PATCH.md  WORKFLOW_ROUTER.md  WRITE_PLANNING.md  index.html  practitioner-saas-budget.md  source-adapters.md
docs/work-packages/: WP-FMR-PUX-30.md  WP-FMR-PUX-31.md  WP-FMR-PUX-32.md  WP-FMR-WFR-29.md
examples/: saas_budget_inputs.json
fmr/: __init__.py  __main__.py  acceptance.py  cli.py  dispatch.py  entrypoint.py  execution.py  financial_data_dispatch.py  input_dispatch.py  mcp_server.py  model_specs.py  organization.py  plan.py  practitioner_dispatch.py  provider_adapters.py  provider_dispatch.py  provider_plugins.py  provider_runner.py  provider_service.py  qualification.py  readiness.py  router.py  scoping_acceptance.py  scoping_evidence.py  scoping_service.py  types.py  workflow.py  workflow_acceptance.py  workflow_dispatch.py  workflow_projects.py
fmr/adapters/: __init__.py
fmr/api/: __init__.py  app.py  calculation_routes.py  composed.py  execution_routes.py  financial_data_routes.py  input_population_routes.py  models.py  practitioner_routes.py  provider_routes.py  workflow_project_routes.py  workflow_source_routes.py  write_routes.py
fmr/contracts/: __init__.py  artifact-retention-result.v1.schema.json  canonical-financial-data.v2.schema.json  deployment-acceptance-evidence.v1.schema.json  execution-ledger-backup.v1.schema.json  execution-operations-status.v1.schema.json  execution-recovery-result.v1.schema.json  execution-request.v1.schema.json  execution-result.v1.schema.json  external-calculation-acceptance-request.v1.schema.json  finance-workflow-plan.v1.schema.json  finance-workflow-request.v1.schema.json  financial-concept-registry.v1.schema.json  financial-data-binding-profile.v1.schema.json  financial-data-mapping-profile.v1.schema.json  financial-data-mapping-result.v1.schema.json  financial-data-package.v1.schema.json  guided-scoping-acceptance-corpus.v1.schema.json  guided-scoping-acceptance-result.v1.schema.json  (+52 more)
fmr/core/: jobs.py  (+7 more)
pages/: app.js  demo_runtime.py  index.html  styles.css  worker.js
scripts/: build_pages_site.py
tests/: calculation_case.py  financial_data_case.py  input_population_case.py  test_api.py  test_api_analysis.py  test_api_calculation.py  test_api_content_plan.py  test_api_coordinate_plan.py  test_api_executor.py  test_api_financial_data.py  test_api_input_population.py  test_api_patch.py  test_api_realization_plan.py  test_api_target_resolution.py  test_api_write_plan.py  test_calculation.py  test_calculation_workbench.py  test_cli_analysis.py  test_cli_calculation.py  test_cli_content_plan.py  test_cli_coordinate_plan.py  test_cli_executor.py  test_cli_financial_data.py  test_cli_input_population.py  test_cli_inspect.py  test_cli_patch.py  test_cli_realization_plan.py  test_cli_serve.py  test_cli_target_resolution.py  test_cli_write_plan.py  test_content_plan.py  test_content_specs.py  test_contracts.py  test_coordinate_plan.py  test_execution_operations.py  test_executor.py  test_executor_workbench.py  test_financial_data.py  test_financial_data_workbench.py  test_formula_specs.py  (+39 more)
(+159 files in other folders)
