[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-model-router"
version = "0.1.0"
description = "Deterministic financial-model routing and transformation planning"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Daniel Tan" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
fmr = "fmr.cli:main"

[tool.setuptools]
packages = ["fmr", "fmr.contracts"]
include-package-data = true

[tool.setuptools.package-data]
"fmr.contracts" = ["*.json"]
