[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-model-router"
version = "0.2.0"
description = "Deterministic financial-model routing, workbook inspection and transformation planning"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Daniel Tan" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev-ui = ["fastapi>=0.115,<1", "pydantic>=2.7,<3", "uvicorn>=0.30,<1"]
test-ui = ["httpx>=0.27,<1"]

[project.scripts]
fmr = "fmr.cli:main"

[tool.setuptools.packages.find]
include = ["fmr*"]

[tool.setuptools.package-data]
"fmr.contracts" = ["*.json"]
"fmr.web" = ["*.html", "*.js", "*.css"]
"fmr.fixtures" = ["*.json"]
